# regrag

./: .env.example  .gitignore  README.md
.github/workflows/: keep-warm.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml  railway.json
apps/api/src/regrag_api/: __init__.py  audit_auth.py  baseline.py  cli.py  logging_config.py  pii.py  rate_limit.py  server.py
apps/api/src/regrag_api/audit/: __init__.py  log.py
apps/api/src/regrag_api/orchestration/: __init__.py  _anthropic.py  corpus_summary.py  graph.py  state.py
apps/api/src/regrag_api/orchestration/nodes/: __init__.py  answerability.py  classify.py  decompose.py  retrieve.py  synthesize.py  verify.py
apps/api/src/regrag_api/retrieval/: __init__.py  hybrid.py  identifiers.py
apps/api/src/regrag_api/verification/: __init__.py  citations.py  quotes.py  scope.py  substantive.py
apps/api/tests/: conftest.py  test_anchoring_roles.py  test_audit_auth.py  test_identifier_preservation.py  test_logging.py  test_pii.py  test_prompt_example.py  test_streaming_noop_delta.py  test_verifier_fail_open.py
apps/ingest/: pyproject.toml
apps/ingest/src/regrag_ingest/: __init__.py  chunk.py  cli.py  embed.py  fetch.py  load.py  manifest.py  parse.py
apps/web/: package.json  vercel.json  (+1 more)
corpus/: manifest.yaml
docs/: critique.md  deployment.md  eval-results.md  feasibility-notes.md  ferc-ingestion-plan.md  implementation-plan.md  loadtest.md  regrag-case-study.md  regrag-diagrams.md  review-followups.md
infra/: check_connections.py  neon-schema.sql
scripts/: loadtest.py  retrieval_ab.py  screenshot.mjs
(+25 files in other folders)
